--- a/FinPlan.Web/Components/Shared/RetirementProjection.razor
+++ b/FinPlan.Web/Components/Shared/RetirementProjection.razor
@@ -530,6 +530,9 @@
         position: relative;
     }
 
+    
+</style>
+<style>
     /* Update second row tooltips to use same styling as first row */
     .first-row-tooltip {
         position: absolute;
