--- a/FinPlan.Web/Pages/Feedback/CostOfLivingSurvey.razor
+++ b/FinPlan.Web/Pages/Feedback/CostOfLivingSurvey.razor
@@ -3,9 +3,14 @@
 @using FinPlan.Web.Components.Survey
 @using Microsoft.AspNetCore.Components
 
-<PageTitle>Cost of Living Planner - Survey</PageTitle>
+<div class="alert alert-info" style="margin-bottom:18px; border-radius:10px; font-size:1.05rem;">
+    <strong>Thank you for trying the Cost of Living Planne Planner</strong><br />
+    We truly appreciate you taking the time to share your feedback. There are many questions below, but please feel free to answer only those you wish—every response helps us improve. No personal information is collected
+</div>
 
-<SurveyForm Questions="@questions" Title="Cost of Living Planner -  Survey" SurveyType="CostOfLiving" Description="Thank you for helping us improve! Please answer the following questions about your experience. No personal information is collected." />
+<SurveyForm Questions="@questions" Title="Cost of Living Planner - Survey" SurveyType="CostOfLiving"/>
+
+
 
 @code {
     private List<SurveyQuestion> questions = new()
