--- a/FinPlan.Web/Pages/Feedback/CostOfLivingSurvey.razor
+++ b/FinPlan.Web/Pages/Feedback/CostOfLivingSurvey.razor
@@ -8,7 +8,7 @@
     We truly appreciate you taking the time to share your feedback. There are many questions below, but please feel free to answer only those you wish—every response helps us improve. No personal information is collected
 </div>
 
-<SurveyForm Questions="@questions" Title="Cost of Living Planner - Survey" SurveyType="CostOfLiving"/>
+<SurveyForm Questions="@questions" Title="Cost of Living Planner - Survey" SurveyType="CostOfLivingPlanner"/>
 
 
 
