--- a/FinPlan.Web/Pages/Feedback/SavingsSurvey.razor
+++ b/FinPlan.Web/Pages/Feedback/SavingsSurvey.razor
@@ -9,7 +9,7 @@
     We truly appreciate you taking the time to share your feedback. There are many questions below, but please feel free to answer only those you wish—every response helps us improve. No personal information is collected
 </div>
 
-<SurveyForm Questions="@questions" Title="Savings & Wealth Building Planner - Survey" SurveyType="WealthJourney"/>
+<SurveyForm Questions="@questions" Title="Savings & Wealth Building Planner - Survey" SurveyType="SavingsPlanner"/>
 
 
 @code {
